# quiz-ai

./: README.md  conf.yaml.example  main.py  pyproject.toml  server.py
src/agents/: agents.py
src/config/: agents.py  configuration.py  loader.py  tools.py
src/crawler/: crawler.py  jina_client.py  readability_extractor.py
src/demos/: human_loop_demo.py  tavily_demos.py
src/graph/: builder.py  checkpoint.py  nodes.py  types.py
src/llms/: llm.py
src/llms/providers/: dashscope.py
src/prompts/: coordinator.md  planner.md  planner_model.py  reporter.md  template.py
src/rag/: builder.py  ragflow.py  retriever.py
src/server/: app.py  chat_request.py
src/tools/: crawl.py  decorators.py  python_repl.py  retriever.py  search.py  tavily_search.py
src/utils/: json_utils.py
